# le-wm

./: .gitignore  DATA_PIPELINE.md  probe_logging.py  pyproject.toml  swm_patches.py  train.py  utils.py  wm_error_logging.py
beaker/: merge_tamp.yaml  smoke_blocksuite.yaml  train_drop_1gpu.yaml  train_drop_landed_1gpu.yaml  train_tamp_full.yaml  train_tamp_full_8gpu.yaml  train_tamp_full_g1.yaml  train_tamp_full_profile.yaml  train_tamp_smoke.yaml  verify_wm_error_logging.yaml
config/train/: lewm.yaml
config/train/data/: blocksuite_drop.yaml  blocksuite_drop_landed.yaml  tamp.yaml  tamp_full.yaml  tamp_full_h264.yaml  tamp_full_h264_g1.yaml
scripts/: fix_blocksuite_dataset.py  fix_lerobot_video_index.py  merge_tamp_dataset.py  transcode_av1_to_h264.sh
